Fixed GameComponent
Found and squashed bug mentioned in last commit (fixed height was issue).

--- a/src/app/game/game.component.css
+++ b/src/app/game/game.component.css
@@ -10,7 +10,6 @@ main {
 /* two rows, one column */
 
 section {
-  height: 100%;
   display: flex;
   flex-direction: column;
   flex: 1;
@@ -28,8 +27,6 @@ h1 {
 }
 
 .column {
-  /* Figure out what's wrong here */
-  min-height: 200px;
   display: flex;
   flex-direction: column;
 }
